[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/DropZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Draggable.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="DropZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 512 )

[node name="Draggable" parent="." instance=ExtResource( 7 )]
position = Vector2( 768, 256 )

[node name="Draggable4" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 256 )

[node name="Draggable5" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 512 )

[node name="Draggable6" parent="." instance=ExtResource( 7 )]
position = Vector2( 256, 768 )

[node name="Draggable2" parent="." instance=ExtResource( 7 )]
position = Vector2( 768, 512 )

[node name="Draggable3" parent="." instance=ExtResource( 7 )]
position = Vector2( 768, 768 )
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
